minorc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LLAVDER
    LLAVIZQ
    MIENTRAS
    NUMERO

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> asignacion_temp
Rule 6     instruccion -> asignacion_param
Rule 7     instruccion -> asignacion_val
Rule 8     instruccion -> asignacion_dir
Rule 9     instruccion -> asignacion_pila
Rule 10    instruccion -> asignacion_puntero
Rule 11    instruccion -> borrar_temp
Rule 12    instruccion -> if_instr
Rule 13    instruccion -> metodo
Rule 14    instruccion -> goto
Rule 15    instruccion -> exit
Rule 16    exit -> EXIT PTCOMA
Rule 17    metodo -> ID DOSPUNTOS
Rule 18    imprimir_instr -> IMPRIMIR PARIZQ expresion_numerica PARDER PTCOMA
Rule 19    borrar_temp -> UNSET PARIZQ expresion_numerica PARDER PTCOMA
Rule 20    asignacion_temp -> TEMP IGUAL expresion_numerica PTCOMA
Rule 21    asignacion_param -> PARAM IGUAL expresion_numerica PTCOMA
Rule 22    asignacion_val -> VAL IGUAL expresion_numerica PTCOMA
Rule 23    asignacion_dir -> DIR IGUAL expresion_numerica PTCOMA
Rule 24    asignacion_pila -> PILA IGUAL expresion_numerica PTCOMA
Rule 25    asignacion_puntero -> PUNTERO IGUAL expresion_numerica PTCOMA
Rule 26    asignacion_temp -> TEMP dimensiones IGUAL expresion_numerica PTCOMA
Rule 27    asignacion_temp -> PILA dimensiones IGUAL expresion_numerica PTCOMA
Rule 28    expresion_numerica -> TEMP dimensiones
Rule 29    expresion_numerica -> PILA dimensiones
Rule 30    dimensiones -> dimensiones dimension
Rule 31    dimensiones -> dimension
Rule 32    dimension -> CORIZQ expresion_numerica CORDER
Rule 33    if_instr -> IF PARIZQ expresion_numerica PARDER expresion_numerica
Rule 34    expresion_numerica -> expresion_numerica MAS expresion_numerica
Rule 35    expresion_numerica -> expresion_numerica MENOS expresion_numerica
Rule 36    expresion_numerica -> expresion_numerica POR expresion_numerica
Rule 37    expresion_numerica -> expresion_numerica DIVIDIDO expresion_numerica
Rule 38    expresion_numerica -> expresion_numerica RESIDUO expresion_numerica
Rule 39    expresion_numerica -> expresion_numerica IGUALQUE expresion_numerica
Rule 40    expresion_numerica -> expresion_numerica NIGUALQUE expresion_numerica
Rule 41    expresion_numerica -> expresion_numerica MAYIGUAL expresion_numerica
Rule 42    expresion_numerica -> expresion_numerica MENIGUAL expresion_numerica
Rule 43    expresion_numerica -> expresion_numerica MAYQUE expresion_numerica
Rule 44    expresion_numerica -> expresion_numerica MENQUE expresion_numerica
Rule 45    expresion_numerica -> expresion_numerica AND expresion_numerica
Rule 46    expresion_numerica -> expresion_numerica OR expresion_numerica
Rule 47    expresion_numerica -> expresion_numerica XOR expresion_numerica
Rule 48    expresion_numerica -> expresion_numerica ANDBIT expresion_numerica
Rule 49    expresion_numerica -> expresion_numerica ORBIT expresion_numerica
Rule 50    expresion_numerica -> expresion_numerica XORBIT expresion_numerica
Rule 51    expresion_numerica -> expresion_numerica MAYORBIT expresion_numerica
Rule 52    expresion_numerica -> expresion_numerica MENORBIT expresion_numerica
Rule 53    expresion_numerica -> NOT expresion_numerica
Rule 54    expresion_numerica -> NOTBIT expresion_numerica
Rule 55    expresion_numerica -> PARIZQ INT PARDER expresion_numerica
Rule 56    expresion_numerica -> PARIZQ FLOAT PARDER expresion_numerica
Rule 57    expresion_numerica -> PARIZQ CHAR PARDER expresion_numerica
Rule 58    expresion_numerica -> MENOS expresion_numerica
Rule 59    expresion_numerica -> ABS PARIZQ expresion_numerica PARDER
Rule 60    expresion_numerica -> PARIZQ expresion_numerica PARDER
Rule 61    goto -> expresion_numerica
Rule 62    expresion_numerica -> GOTO expresion_numerica PTCOMA
Rule 63    expresion_numerica -> ENTERO
Rule 64    expresion_numerica -> DECIMAL
Rule 65    expresion_numerica -> TEMP
Rule 66    expresion_numerica -> ID
Rule 67    expresion_numerica -> PARAM
Rule 68    expresion_numerica -> VAL
Rule 69    expresion_numerica -> DIR
Rule 70    expresion_numerica -> PILA
Rule 71    expresion_numerica -> PUNTERO
Rule 72    expresion_cadena -> expresion_cadena CONCAT expresion_cadena
Rule 73    expresion_numerica -> CADENA
Rule 74    expresion_numerica -> CARACTER
Rule 75    expresion_cadena -> expresion_numerica
Rule 76    expresion_numerica -> ARRAY PARIZQ PARDER

Terminals, with rules where they appear

ABS                  : 59
AND                  : 45
ANDBIT               : 48
ARRAY                : 76
CADENA               : 73
CARACTER             : 74
CHAR                 : 57
CONCAT               : 72
CORDER               : 32
CORIZQ               : 32
DECIMAL              : 64
DIR                  : 23 69
DIVIDIDO             : 37
DOSPUNTOS            : 17
ENTERO               : 63
EXIT                 : 16
FLOAT                : 56
GOTO                 : 62
ID                   : 17 66
IF                   : 33
IGUAL                : 20 21 22 23 24 25 26 27
IGUALQUE             : 39
IMPRIMIR             : 18
INT                  : 55
LLAVDER              : 
LLAVIZQ              : 
MAS                  : 34
MAYIGUAL             : 41
MAYORBIT             : 51
MAYQUE               : 43
MENIGUAL             : 42
MENORBIT             : 52
MENOS                : 35 58
MENQUE               : 44
MIENTRAS             : 
NIGUALQUE            : 40
NOT                  : 53
NOTBIT               : 54
NUMERO               : 
OR                   : 46
ORBIT                : 49
PARAM                : 21 67
PARDER               : 18 19 33 55 56 57 59 60 76
PARIZQ               : 18 19 33 55 56 57 59 60 76
PILA                 : 24 27 29 70
POR                  : 36
PTCOMA               : 16 18 19 20 21 22 23 24 25 26 27 62
PUNTERO              : 25 71
RESIDUO              : 38
TEMP                 : 20 26 28 65
UNSET                : 19
VAL                  : 22 68
XOR                  : 47
XORBIT               : 50
error                : 

Nonterminals, with rules where they appear

asignacion_dir       : 8
asignacion_param     : 6
asignacion_pila      : 9
asignacion_puntero   : 10
asignacion_temp      : 5
asignacion_val       : 7
borrar_temp          : 11
dimension            : 30 31
dimensiones          : 26 27 28 29 30
exit                 : 15
expresion_cadena     : 72 72
expresion_numerica   : 18 19 20 21 22 23 24 25 26 27 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 55 56 57 58 59 60 61 62 75
goto                 : 14
if_instr             : 12
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
metodo               : 13

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . asignacion_temp
    (6) instruccion -> . asignacion_param
    (7) instruccion -> . asignacion_val
    (8) instruccion -> . asignacion_dir
    (9) instruccion -> . asignacion_pila
    (10) instruccion -> . asignacion_puntero
    (11) instruccion -> . borrar_temp
    (12) instruccion -> . if_instr
    (13) instruccion -> . metodo
    (14) instruccion -> . goto
    (15) instruccion -> . exit
    (18) imprimir_instr -> . IMPRIMIR PARIZQ expresion_numerica PARDER PTCOMA
    (20) asignacion_temp -> . TEMP IGUAL expresion_numerica PTCOMA
    (26) asignacion_temp -> . TEMP dimensiones IGUAL expresion_numerica PTCOMA
    (27) asignacion_temp -> . PILA dimensiones IGUAL expresion_numerica PTCOMA
    (21) asignacion_param -> . PARAM IGUAL expresion_numerica PTCOMA
    (22) asignacion_val -> . VAL IGUAL expresion_numerica PTCOMA
    (23) asignacion_dir -> . DIR IGUAL expresion_numerica PTCOMA
    (24) asignacion_pila -> . PILA IGUAL expresion_numerica PTCOMA
    (25) asignacion_puntero -> . PUNTERO IGUAL expresion_numerica PTCOMA
    (19) borrar_temp -> . UNSET PARIZQ expresion_numerica PARDER PTCOMA
    (33) if_instr -> . IF PARIZQ expresion_numerica PARDER expresion_numerica
    (17) metodo -> . ID DOSPUNTOS
    (61) goto -> . expresion_numerica
    (16) exit -> . EXIT PTCOMA
    (28) expresion_numerica -> . TEMP dimensiones
    (29) expresion_numerica -> . PILA dimensiones
    (34) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (35) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (36) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (37) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (38) expresion_numerica -> . expresion_numerica RESIDUO expresion_numerica
    (39) expresion_numerica -> . expresion_numerica IGUALQUE expresion_numerica
    (40) expresion_numerica -> . expresion_numerica NIGUALQUE expresion_numerica
    (41) expresion_numerica -> . expresion_numerica MAYIGUAL expresion_numerica
    (42) expresion_numerica -> . expresion_numerica MENIGUAL expresion_numerica
    (43) expresion_numerica -> . expresion_numerica MAYQUE expresion_numerica
    (44) expresion_numerica -> . expresion_numerica MENQUE expresion_numerica
    (45) expresion_numerica -> . expresion_numerica AND expresion_numerica
    (46) expresion_numerica -> . expresion_numerica OR expresion_numerica
    (47) expresion_numerica -> . expresion_numerica XOR expresion_numerica
    (48) expresion_numerica -> . expresion_numerica ANDBIT expresion_numerica
    (49) expresion_numerica -> . expresion_numerica ORBIT expresion_numerica
    (50) expresion_numerica -> . expresion_numerica XORBIT expresion_numerica
    (51) expresion_numerica -> . expresion_numerica MAYORBIT expresion_numerica
    (52) expresion_numerica -> . expresion_numerica MENORBIT expresion_numerica
    (53) expresion_numerica -> . NOT expresion_numerica
    (54) expresion_numerica -> . NOTBIT expresion_numerica
    (55) expresion_numerica -> . PARIZQ INT PARDER expresion_numerica
    (56) expresion_numerica -> . PARIZQ FLOAT PARDER expresion_numerica
    (57) expresion_numerica -> . PARIZQ CHAR PARDER expresion_numerica
    (58) expresion_numerica -> . MENOS expresion_numerica
    (59) expresion_numerica -> . ABS PARIZQ expresion_numerica PARDER
    (60) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (62) expresion_numerica -> . GOTO expresion_numerica PTCOMA
    (63) expresion_numerica -> . ENTERO
    (64) expresion_numerica -> . DECIMAL
    (65) expresion_numerica -> . TEMP
    (66) expresion_numerica -> . ID
    (67) expresion_numerica -> . PARAM
    (68) expresion_numerica -> . VAL
    (69) expresion_numerica -> . DIR
    (70) expresion_numerica -> . PILA
    (71) expresion_numerica -> . PUNTERO
    (73) expresion_numerica -> . CADENA
    (74) expresion_numerica -> . CARACTER
    (76) expresion_numerica -> . ARRAY PARIZQ PARDER

    IMPRIMIR        shift and go to state 16
    TEMP            shift and go to state 19
    PILA            shift and go to state 20
    PARAM           shift and go to state 21
    VAL             shift and go to state 22
    DIR             shift and go to state 23
    PUNTERO         shift and go to state 24
    UNSET           shift and go to state 25
    IF              shift and go to state 26
    ID              shift and go to state 27
    EXIT            shift and go to state 28
    NOT             shift and go to state 30
    NOTBIT          shift and go to state 31
    PARIZQ          shift and go to state 17
    MENOS           shift and go to state 29
    ABS             shift and go to state 32
    GOTO            shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36
    CARACTER        shift and go to state 37
    ARRAY           shift and go to state 38

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    asignacion_temp                shift and go to state 5
    asignacion_param               shift and go to state 6
    asignacion_val                 shift and go to state 7
    asignacion_dir                 shift and go to state 8
    asignacion_pila                shift and go to state 9
    asignacion_puntero             shift and go to state 10
    borrar_temp                    shift and go to state 11
    if_instr                       shift and go to state 12
    metodo                         shift and go to state 13
    goto                           shift and go to state 14
    exit                           shift and go to state 15
    expresion_numerica             shift and go to state 18

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . asignacion_temp
    (6) instruccion -> . asignacion_param
    (7) instruccion -> . asignacion_val
    (8) instruccion -> . asignacion_dir
    (9) instruccion -> . asignacion_pila
    (10) instruccion -> . asignacion_puntero
    (11) instruccion -> . borrar_temp
    (12) instruccion -> . if_instr
    (13) instruccion -> . metodo
    (14) instruccion -> . goto
    (15) instruccion -> . exit
    (18) imprimir_instr -> . IMPRIMIR PARIZQ expresion_numerica PARDER PTCOMA
    (20) asignacion_temp -> . TEMP IGUAL expresion_numerica PTCOMA
    (26) asignacion_temp -> . TEMP dimensiones IGUAL expresion_numerica PTCOMA
    (27) asignacion_temp -> . PILA dimensiones IGUAL expresion_numerica PTCOMA
    (21) asignacion_param -> . PARAM IGUAL expresion_numerica PTCOMA
    (22) asignacion_val -> . VAL IGUAL expresion_numerica PTCOMA
    (23) asignacion_dir -> . DIR IGUAL expresion_numerica PTCOMA
    (24) asignacion_pila -> . PILA IGUAL expresion_numerica PTCOMA
    (25) asignacion_puntero -> . PUNTERO IGUAL expresion_numerica PTCOMA
    (19) borrar_temp -> . UNSET PARIZQ expresion_numerica PARDER PTCOMA
    (33) if_instr -> . IF PARIZQ expresion_numerica PARDER expresion_numerica
    (17) metodo -> . ID DOSPUNTOS
    (61) goto -> . expresion_numerica
    (16) exit -> . EXIT PTCOMA
    (28) expresion_numerica -> . TEMP dimensiones
    (29) expresion_numerica -> . PILA dimensiones
    (34) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (35) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (36) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (37) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (38) expresion_numerica -> . expresion_numerica RESIDUO expresion_numerica
    (39) expresion_numerica -> . expresion_numerica IGUALQUE expresion_numerica
    (40) expresion_numerica -> . expresion_numerica NIGUALQUE expresion_numerica
    (41) expresion_numerica -> . expresion_numerica MAYIGUAL expresion_numerica
    (42) expresion_numerica -> . expresion_numerica MENIGUAL expresion_numerica
    (43) expresion_numerica -> . expresion_numerica MAYQUE expresion_numerica
    (44) expresion_numerica -> . expresion_numerica MENQUE expresion_numerica
    (45) expresion_numerica -> . expresion_numerica AND expresion_numerica
    (46) expresion_numerica -> . expresion_numerica OR expresion_numerica
    (47) expresion_numerica -> . expresion_numerica XOR expresion_numerica
    (48) expresion_numerica -> . expresion_numerica ANDBIT expresion_numerica
    (49) expresion_numerica -> . expresion_numerica ORBIT expresion_numerica
    (50) expresion_numerica -> . expresion_numerica XORBIT expresion_numerica
    (51) expresion_numerica -> . expresion_numerica MAYORBIT expresion_numerica
    (52) expresion_numerica -> . expresion_numerica MENORBIT expresion_numerica
    (53) expresion_numerica -> . NOT expresion_numerica
    (54) expresion_numerica -> . NOTBIT expresion_numerica
    (55) expresion_numerica -> . PARIZQ INT PARDER expresion_numerica
    (56) expresion_numerica -> . PARIZQ FLOAT PARDER expresion_numerica
    (57) expresion_numerica -> . PARIZQ CHAR PARDER expresion_numerica
    (58) expresion_numerica -> . MENOS expresion_numerica
    (59) expresion_numerica -> . ABS PARIZQ expresion_numerica PARDER
    (60) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (62) expresion_numerica -> . GOTO expresion_numerica PTCOMA
    (63) expresion_numerica -> . ENTERO
    (64) expresion_numerica -> . DECIMAL
    (65) expresion_numerica -> . TEMP
    (66) expresion_numerica -> . ID
    (67) expresion_numerica -> . PARAM
    (68) expresion_numerica -> . VAL
    (69) expresion_numerica -> . DIR
    (70) expresion_numerica -> . PILA
    (71) expresion_numerica -> . PUNTERO
    (73) expresion_numerica -> . CADENA
    (74) expresion_numerica -> . CARACTER
    (76) expresion_numerica -> . ARRAY PARIZQ PARDER

    $end            reduce using rule 1 (init -> instrucciones .)
    IMPRIMIR        shift and go to state 16
    TEMP            shift and go to state 19
    PILA            shift and go to state 20
    PARAM           shift and go to state 21
    VAL             shift and go to state 22
    DIR             shift and go to state 23
    PUNTERO         shift and go to state 24
    UNSET           shift and go to state 25
    IF              shift and go to state 26
    ID              shift and go to state 27
    EXIT            shift and go to state 28
    NOT             shift and go to state 30
    NOTBIT          shift and go to state 31
    PARIZQ          shift and go to state 17
    MENOS           shift and go to state 29
    ABS             shift and go to state 32
    GOTO            shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36
    CARACTER        shift and go to state 37
    ARRAY           shift and go to state 38

    instruccion                    shift and go to state 39
    imprimir_instr                 shift and go to state 4
    asignacion_temp                shift and go to state 5
    asignacion_param               shift and go to state 6
    asignacion_val                 shift and go to state 7
    asignacion_dir                 shift and go to state 8
    asignacion_pila                shift and go to state 9
    asignacion_puntero             shift and go to state 10
    borrar_temp                    shift and go to state 11
    if_instr                       shift and go to state 12
    metodo                         shift and go to state 13
    goto                           shift and go to state 14
    exit                           shift and go to state 15
    expresion_numerica             shift and go to state 18

state 3

    (3) instrucciones -> instruccion .

    IMPRIMIR        reduce using rule 3 (instrucciones -> instruccion .)
    TEMP            reduce using rule 3 (instrucciones -> instruccion .)
    PILA            reduce using rule 3 (instrucciones -> instruccion .)
    PARAM           reduce using rule 3 (instrucciones -> instruccion .)
    VAL             reduce using rule 3 (instrucciones -> instruccion .)
    DIR             reduce using rule 3 (instrucciones -> instruccion .)
    PUNTERO         reduce using rule 3 (instrucciones -> instruccion .)
    UNSET           reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    EXIT            reduce using rule 3 (instrucciones -> instruccion .)
    NOT             reduce using rule 3 (instrucciones -> instruccion .)
    NOTBIT          reduce using rule 3 (instrucciones -> instruccion .)
    PARIZQ          reduce using rule 3 (instrucciones -> instruccion .)
    MENOS           reduce using rule 3 (instrucciones -> instruccion .)
    ABS             reduce using rule 3 (instrucciones -> instruccion .)
    GOTO            reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 3 (instrucciones -> instruccion .)
    CADENA          reduce using rule 3 (instrucciones -> instruccion .)
    CARACTER        reduce using rule 3 (instrucciones -> instruccion .)
    ARRAY           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    IMPRIMIR        reduce using rule 4 (instruccion -> imprimir_instr .)
    TEMP            reduce using rule 4 (instruccion -> imprimir_instr .)
    PILA            reduce using rule 4 (instruccion -> imprimir_instr .)
    PARAM           reduce using rule 4 (instruccion -> imprimir_instr .)
    VAL             reduce using rule 4 (instruccion -> imprimir_instr .)
    DIR             reduce using rule 4 (instruccion -> imprimir_instr .)
    PUNTERO         reduce using rule 4 (instruccion -> imprimir_instr .)
    UNSET           reduce using rule 4 (instruccion -> imprimir_instr .)
    IF              reduce using rule 4 (instruccion -> imprimir_instr .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr .)
    EXIT            reduce using rule 4 (instruccion -> imprimir_instr .)
    NOT             reduce using rule 4 (instruccion -> imprimir_instr .)
    NOTBIT          reduce using rule 4 (instruccion -> imprimir_instr .)
    PARIZQ          reduce using rule 4 (instruccion -> imprimir_instr .)
    MENOS           reduce using rule 4 (instruccion -> imprimir_instr .)
    ABS             reduce using rule 4 (instruccion -> imprimir_instr .)
    GOTO            reduce using rule 4 (instruccion -> imprimir_instr .)
    ENTERO          reduce using rule 4 (instruccion -> imprimir_instr .)
    DECIMAL         reduce using rule 4 (instruccion -> imprimir_instr .)
    CADENA          reduce using rule 4 (instruccion -> imprimir_instr .)
    CARACTER        reduce using rule 4 (instruccion -> imprimir_instr .)
    ARRAY           reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> asignacion_temp .

    IMPRIMIR        reduce using rule 5 (instruccion -> asignacion_temp .)
    TEMP            reduce using rule 5 (instruccion -> asignacion_temp .)
    PILA            reduce using rule 5 (instruccion -> asignacion_temp .)
    PARAM           reduce using rule 5 (instruccion -> asignacion_temp .)
    VAL             reduce using rule 5 (instruccion -> asignacion_temp .)
    DIR             reduce using rule 5 (instruccion -> asignacion_temp .)
    PUNTERO         reduce using rule 5 (instruccion -> asignacion_temp .)
    UNSET           reduce using rule 5 (instruccion -> asignacion_temp .)
    IF              reduce using rule 5 (instruccion -> asignacion_temp .)
    ID              reduce using rule 5 (instruccion -> asignacion_temp .)
    EXIT            reduce using rule 5 (instruccion -> asignacion_temp .)
    NOT             reduce using rule 5 (instruccion -> asignacion_temp .)
    NOTBIT          reduce using rule 5 (instruccion -> asignacion_temp .)
    PARIZQ          reduce using rule 5 (instruccion -> asignacion_temp .)
    MENOS           reduce using rule 5 (instruccion -> asignacion_temp .)
    ABS             reduce using rule 5 (instruccion -> asignacion_temp .)
    GOTO            reduce using rule 5 (instruccion -> asignacion_temp .)
    ENTERO          reduce using rule 5 (instruccion -> asignacion_temp .)
    DECIMAL         reduce using rule 5 (instruccion -> asignacion_temp .)
    CADENA          reduce using rule 5 (instruccion -> asignacion_temp .)
    CARACTER        reduce using rule 5 (instruccion -> asignacion_temp .)
    ARRAY           reduce using rule 5 (instruccion -> asignacion_temp .)
    $end            reduce using rule 5 (instruccion -> asignacion_temp .)


state 6

    (6) instruccion -> asignacion_param .

    IMPRIMIR        reduce using rule 6 (instruccion -> asignacion_param .)
    TEMP            reduce using rule 6 (instruccion -> asignacion_param .)
    PILA            reduce using rule 6 (instruccion -> asignacion_param .)
    PARAM           reduce using rule 6 (instruccion -> asignacion_param .)
    VAL             reduce using rule 6 (instruccion -> asignacion_param .)
    DIR             reduce using rule 6 (instruccion -> asignacion_param .)
    PUNTERO         reduce using rule 6 (instruccion -> asignacion_param .)
    UNSET           reduce using rule 6 (instruccion -> asignacion_param .)
    IF              reduce using rule 6 (instruccion -> asignacion_param .)
    ID              reduce using rule 6 (instruccion -> asignacion_param .)
    EXIT            reduce using rule 6 (instruccion -> asignacion_param .)
    NOT             reduce using rule 6 (instruccion -> asignacion_param .)
    NOTBIT          reduce using rule 6 (instruccion -> asignacion_param .)
    PARIZQ          reduce using rule 6 (instruccion -> asignacion_param .)
    MENOS           reduce using rule 6 (instruccion -> asignacion_param .)
    ABS             reduce using rule 6 (instruccion -> asignacion_param .)
    GOTO            reduce using rule 6 (instruccion -> asignacion_param .)
    ENTERO          reduce using rule 6 (instruccion -> asignacion_param .)
    DECIMAL         reduce using rule 6 (instruccion -> asignacion_param .)
    CADENA          reduce using rule 6 (instruccion -> asignacion_param .)
    CARACTER        reduce using rule 6 (instruccion -> asignacion_param .)
    ARRAY           reduce using rule 6 (instruccion -> asignacion_param .)
    $end            reduce using rule 6 (instruccion -> asignacion_param .)


state 7

    (7) instruccion -> asignacion_val .

    IMPRIMIR        reduce using rule 7 (instruccion -> asignacion_val .)
    TEMP            reduce using rule 7 (instruccion -> asignacion_val .)
    PILA            reduce using rule 7 (instruccion -> asignacion_val .)
    PARAM           reduce using rule 7 (instruccion -> asignacion_val .)
    VAL             reduce using rule 7 (instruccion -> asignacion_val .)
    DIR             reduce using rule 7 (instruccion -> asignacion_val .)
    PUNTERO         reduce using rule 7 (instruccion -> asignacion_val .)
    UNSET           reduce using rule 7 (instruccion -> asignacion_val .)
    IF              reduce using rule 7 (instruccion -> asignacion_val .)
    ID              reduce using rule 7 (instruccion -> asignacion_val .)
    EXIT            reduce using rule 7 (instruccion -> asignacion_val .)
    NOT             reduce using rule 7 (instruccion -> asignacion_val .)
    NOTBIT          reduce using rule 7 (instruccion -> asignacion_val .)
    PARIZQ          reduce using rule 7 (instruccion -> asignacion_val .)
    MENOS           reduce using rule 7 (instruccion -> asignacion_val .)
    ABS             reduce using rule 7 (instruccion -> asignacion_val .)
    GOTO            reduce using rule 7 (instruccion -> asignacion_val .)
    ENTERO          reduce using rule 7 (instruccion -> asignacion_val .)
    DECIMAL         reduce using rule 7 (instruccion -> asignacion_val .)
    CADENA          reduce using rule 7 (instruccion -> asignacion_val .)
    CARACTER        reduce using rule 7 (instruccion -> asignacion_val .)
    ARRAY           reduce using rule 7 (instruccion -> asignacion_val .)
    $end            reduce using rule 7 (instruccion -> asignacion_val .)


state 8

    (8) instruccion -> asignacion_dir .

    IMPRIMIR        reduce using rule 8 (instruccion -> asignacion_dir .)
    TEMP            reduce using rule 8 (instruccion -> asignacion_dir .)
    PILA            reduce using rule 8 (instruccion -> asignacion_dir .)
    PARAM           reduce using rule 8 (instruccion -> asignacion_dir .)
    VAL             reduce using rule 8 (instruccion -> asignacion_dir .)
    DIR             reduce using rule 8 (instruccion -> asignacion_dir .)
    PUNTERO         reduce using rule 8 (instruccion -> asignacion_dir .)
    UNSET           reduce using rule 8 (instruccion -> asignacion_dir .)
    IF              reduce using rule 8 (instruccion -> asignacion_dir .)
    ID              reduce using rule 8 (instruccion -> asignacion_dir .)
    EXIT            reduce using rule 8 (instruccion -> asignacion_dir .)
    NOT             reduce using rule 8 (instruccion -> asignacion_dir .)
    NOTBIT          reduce using rule 8 (instruccion -> asignacion_dir .)
    PARIZQ          reduce using rule 8 (instruccion -> asignacion_dir .)
    MENOS           reduce using rule 8 (instruccion -> asignacion_dir .)
    ABS             reduce using rule 8 (instruccion -> asignacion_dir .)
    GOTO            reduce using rule 8 (instruccion -> asignacion_dir .)
    ENTERO          reduce using rule 8 (instruccion -> asignacion_dir .)
    DECIMAL         reduce using rule 8 (instruccion -> asignacion_dir .)
    CADENA          reduce using rule 8 (instruccion -> asignacion_dir .)
    CARACTER        reduce using rule 8 (instruccion -> asignacion_dir .)
    ARRAY           reduce using rule 8 (instruccion -> asignacion_dir .)
    $end            reduce using rule 8 (instruccion -> asignacion_dir .)


state 9

    (9) instruccion -> asignacion_pila .

    IMPRIMIR        reduce using rule 9 (instruccion -> asignacion_pila .)
    TEMP            reduce using rule 9 (instruccion -> asignacion_pila .)
    PILA            reduce using rule 9 (instruccion -> asignacion_pila .)
    PARAM           reduce using rule 9 (instruccion -> asignacion_pila .)
    VAL             reduce using rule 9 (instruccion -> asignacion_pila .)
    DIR             reduce using rule 9 (instruccion -> asignacion_pila .)
    PUNTERO         reduce using rule 9 (instruccion -> asignacion_pila .)
    UNSET           reduce using rule 9 (instruccion -> asignacion_pila .)
    IF              reduce using rule 9 (instruccion -> asignacion_pila .)
    ID              reduce using rule 9 (instruccion -> asignacion_pila .)
    EXIT            reduce using rule 9 (instruccion -> asignacion_pila .)
    NOT             reduce using rule 9 (instruccion -> asignacion_pila .)
    NOTBIT          reduce using rule 9 (instruccion -> asignacion_pila .)
    PARIZQ          reduce using rule 9 (instruccion -> asignacion_pila .)
    MENOS           reduce using rule 9 (instruccion -> asignacion_pila .)
    ABS             reduce using rule 9 (instruccion -> asignacion_pila .)
    GOTO            reduce using rule 9 (instruccion -> asignacion_pila .)
    ENTERO          reduce using rule 9 (instruccion -> asignacion_pila .)
    DECIMAL         reduce using rule 9 (instruccion -> asignacion_pila .)
    CADENA          reduce using rule 9 (instruccion -> asignacion_pila .)
    CARACTER        reduce using rule 9 (instruccion -> asignacion_pila .)
    ARRAY           reduce using rule 9 (instruccion -> asignacion_pila .)
    $end            reduce using rule 9 (instruccion -> asignacion_pila .)


state 10

    (10) instruccion -> asignacion_puntero .

    IMPRIMIR        reduce using rule 10 (instruccion -> asignacion_puntero .)
    TEMP            reduce using rule 10 (instruccion -> asignacion_puntero .)
    PILA            reduce using rule 10 (instruccion -> asignacion_puntero .)
    PARAM           reduce using rule 10 (instruccion -> asignacion_puntero .)
    VAL             reduce using rule 10 (instruccion -> asignacion_puntero .)
    DIR             reduce using rule 10 (instruccion -> asignacion_puntero .)
    PUNTERO         reduce using rule 10 (instruccion -> asignacion_puntero .)
    UNSET           reduce using rule 10 (instruccion -> asignacion_puntero .)
    IF              reduce using rule 10 (instruccion -> asignacion_puntero .)
    ID              reduce using rule 10 (instruccion -> asignacion_puntero .)
    EXIT            reduce using rule 10 (instruccion -> asignacion_puntero .)
    NOT             reduce using rule 10 (instruccion -> asignacion_puntero .)
    NOTBIT          reduce using rule 10 (instruccion -> asignacion_puntero .)
    PARIZQ          reduce using rule 10 (instruccion -> asignacion_puntero .)
    MENOS           reduce using rule 10 (instruccion -> asignacion_puntero .)
    ABS             reduce using rule 10 (instruccion -> asignacion_puntero .)
    GOTO            reduce using rule 10 (instruccion -> asignacion_puntero .)
    ENTERO          reduce using rule 10 (instruccion -> asignacion_puntero .)
    DECIMAL         reduce using rule 10 (instruccion -> asignacion_puntero .)
    CADENA          reduce using rule 10 (instruccion -> asignacion_puntero .)
    CARACTER        reduce using rule 10 (instruccion -> asignacion_puntero .)
    ARRAY           reduce using rule 10 (instruccion -> asignacion_puntero .)
    $end            reduce using rule 10 (instruccion -> asignacion_puntero .)


state 11

    (11) instruccion -> borrar_temp .

    IMPRIMIR        reduce using rule 11 (instruccion -> borrar_temp .)
    TEMP            reduce using rule 11 (instruccion -> borrar_temp .)
    PILA            reduce using rule 11 (instruccion -> borrar_temp .)
    PARAM           reduce using rule 11 (instruccion -> borrar_temp .)
    VAL             reduce using rule 11 (instruccion -> borrar_temp .)
    DIR             reduce using rule 11 (instruccion -> borrar_temp .)
    PUNTERO         reduce using rule 11 (instruccion -> borrar_temp .)
    UNSET           reduce using rule 11 (instruccion -> borrar_temp .)
